# advent-of-code

./: .gitignore  flake.nix  pyproject.toml
2023/src/: day1.py  day2.py  day3.py
2023/src/puzzle/: day3.debug.txt  day3.txt
