[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["HinnyTsang <mhstsangab@connect.ust.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
pylint = "^3.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
